# DualView

./: LICENSE  README.md  calculate_dataset_mean.py
comparison/: CIFAR.yaml
config_files/: dualview.ipynb  explain_config_generator.ipynb  train_config_generator.ipynb
config_files/.ipynb_checkpoints/: evaluate_config_generator-checkpoint.ipynb  explain_config_generator-checkpoint.ipynb
config_files/comparison/: MNIST.yaml
config_files/submission notebooks/: evaluate_config_generator.ipynb
evaluate/CIFAR/: resnet_corrupt_dualview.yaml  resnet_corrupt_representer.yaml  resnet_corrupt_rp_similarity.yaml  resnet_corrupt_similarity.yaml  resnet_mark_dualview.yaml  resnet_mark_influence.yaml  resnet_mark_representer.yaml  resnet_mark_similarity.yaml  resnet_std_influence.yaml  resnet_std_similarity.yaml
evaluation/: detailed_explanations.py  dualview_analysis.py  examples.py  examples_comparison.py  explain.py  explain_marked.py  feature_attribution.py  merge_time_results.py  plot_poisoning_curves.py
evaluation/solvers/interfaces/Shark-4.0.0/: CMakeLists.txt  main.cpp  run.sh  solver
singularity/: build.sh  explain.def  explain_marked.def  train.def
slurm/: basic_explain.sh  clean.sh  explain.sh  explain_job_CIFAR.sh  explain_job_MNIST.sh  explain_marked.sh  explain_marked_job_CIFAR.sh  explain_marked_job_MNIST.sh  homo_explain.sh  train.sh  train_job_CIFAR.sh  train_job_MNIST.sh
src/: evaluate.py  examples_comparison.py  explain.py  explain_average_time.py  feature_attribution.py  feature_attribution_nb.ipynb  feature_attribution_testing.py  train.py
(+125 files in other folders)
